splitview: Fix bugs with long press on overview button.

Fix bug where if one item is snapped, and we long press to exit split
view, some of the overview mode is still visible.
Fix bug where long press no longer opens split view when used in overview
mode. I think this is because wm::ActiveWindow no longer returns nullptr
in overview mode.

Test: ash_unittests SplitViewControllerTest.LongPress*
Bug: 784013
Change-Id: Ib7cd5f621b7dbd9fc8200aca6656cdb6a7a4d8d2
Reviewed-on: https://chromium-review.googlesource.com/767044
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519358}
Former-commit-id: 580adadc1d1325d8ba015bb1841f80dab4128f69