ash/wm/overview/window_selector_controller.cc
@@ -140,7 +140,9 @@ void WindowSelectorController::OnOverviewButtonTrayLongPressed(
 
   // Depending on the state of the windows and split view, a long press has many
   // different results.
-  // 1. Already in split view - exit split view.
+  // 1. Already in split view - exit split view. Activate the left window if it
+  // is snapped left or both sides. Activate the right window if it is snapped
+  // right.
   // 2. Not in overview mode - enter split view iff
   //     a) there is an active window
   //     b) there are at least two windows in the mru list
@@ -152,27 +154,37 @@ void WindowSelectorController::OnOverviewButtonTrayLongPressed(
   auto* split_view_controller = Shell::Get()->split_view_controller();
   // Exit split view mode if we are already in it.
   if (split_view_controller->IsSplitViewModeActive()) {
+    aura::Window* active_window = split_view_controller->left_window()
+                                      ? split_view_controller->left_window()
+                                      : split_view_controller->right_window();
+    DCHECK(active_window);
     split_view_controller->EndSplitView();
+    if (IsSelecting())
+      ToggleOverview();
+    // In some cases the window returned by wm::GetActiveWindow will be an item
+    // in overview mode. To work around this set |active_window| before exiting
+    // split view.
+    wm::ActivateWindow(active_window);
     return;
   }
 
-  auto* active_window = wm::GetActiveWindow();
-  // Do nothing if there are no active windows or less than two windows to work
-  // with.
-  if (!active_window ||
-      Shell::Get()->mru_window_tracker()->BuildMruWindowList().size() < 2u) {
-    return;
-  }
-
-  // Show a toast if the window cannot be snapped.
-  if (!split_view_controller->CanSnap(active_window)) {
-    split_view_controller->ShowAppCannotSnapToast();
-    return;
-  }
-
-  // If we are not in overview mode snap the window left and enter overview
-  // mode.
   if (!IsSelecting()) {
+    aura::Window* active_window = wm::GetActiveWindow();
+    // Do nothing if there are no active windows or less than two windows to
+    // work with.
+    if (!active_window ||
+        Shell::Get()->mru_window_tracker()->BuildMruWindowList().size() < 2u) {
+      return;
+    }
+
+    // Show a toast if the window cannot be snapped.
+    if (!split_view_controller->CanSnap(active_window)) {
+      split_view_controller->ShowAppCannotSnapToast();
+      return;
+    }
+
+    // If we are not in overview mode snap the window left and enter overview
+    // mode.
     split_view_controller->SnapWindow(active_window, SplitViewController::LEFT);
     ToggleOverview();
     return;
@@ -186,7 +198,7 @@ void WindowSelectorController::OnOverviewButtonTrayLongPressed(
       wm::GetRootWindowAt(event_location));
   if (current_grid) {
     const auto& windows = current_grid->window_list();
-    if (windows.size() > 0)
+    if (windows.size() > 1)
       item_to_snap = windows[0].get();
   }
 
